--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "firebase": "^11.1.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^11.0.2",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
