--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
+    "i18next": "^24.2.1",
+    "livekit-client": "^2.8.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^11.0.2",
