--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "type": "module",
   "proxy": "http://localhost:5000",
   "scripts": {
-    "dev": "vite --host",
-    "build": "vite build",
+    "local": "vite --mode localtest",
+    "dev": "vite --host --mode dev",
+    "build": "vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@livekit/components-react": "^2.7.0",
+    "@livekit/components-styles": "^1.1.4",
     "axios": "^1.7.9",
+    "events": "^3.3.0",
     "firebase": "^11.1.0",
     "livekit-client": "^2.8.0",
     "lucide-react": "^0.344.0",
