--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
     "react-intersection-observer": "^9.8.1",
+    "react-markdown": "^9.0.3",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^11.0.2",
     "uuid": "^11.0.3"
