--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
     "@livekit/components-react": "^2.7.0",
     "@livekit/components-styles": "^1.1.4",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "events": "^3.3.0",
     "firebase": "^11.1.0",
     "i18next": "^24.2.1",
     "livekit-client": "^2.8.0",
+    "local": "^0.3.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
     "react-intersection-observer": "^9.8.1",
     "react-markdown": "^9.0.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^11.0.2",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
